[gd_scene load_steps=4 format=2]

[ext_resource path="res://examples/scenes/detailed_scene_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://examples/scenes/platform.gd" type="Script" id=2]
[ext_resource path="res://examples/fonts/default_font.tres" type="DynamicFont" id=3]

[node name="Platform" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="MarginContainer2" type="MarginContainer" parent="." index="1"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 90.0
margin_right = -20.0
margin_bottom = 520.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2" index="0"]
margin_right = 920.0
margin_bottom = 430.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/VBoxContainer" index="0"]
margin_right = 920.0
margin_bottom = 28.0
custom_constants/separation = 20

[node name="PlatformID" type="Label" parent="MarginContainer2/VBoxContainer/HBoxContainer" index="0"]
margin_right = 113.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "Platform ID:"

[node name="Language" type="Label" parent="MarginContainer2/VBoxContainer/HBoxContainer" index="1"]
margin_left = 133.0
margin_right = 229.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "Language:"

[node name="Payload" type="Label" parent="MarginContainer2/VBoxContainer/HBoxContainer" index="2"]
margin_left = 249.0
margin_right = 327.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "Payload:"

[node name="Tld" type="Label" parent="MarginContainer2/VBoxContainer/HBoxContainer" index="3"]
margin_left = 347.0
margin_right = 380.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "Tld:"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer2/VBoxContainer" index="1"]
margin_top = 48.0
margin_right = 920.0
margin_bottom = 98.0
custom_constants/separation = 20

[node name="SendGameReadyButton" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer2" index="0"]
margin_right = 180.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Send Game Ready"

[node name="SendInGameLoadingStartedButton" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer2" index="1"]
margin_left = 200.0
margin_right = 494.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Send In Game Loading Started"

[node name="SendInGameLoadingStoppedButton" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer2" index="2"]
margin_left = 514.0
margin_right = 818.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Send In Game Loading Stopped"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer2/VBoxContainer" index="2"]
margin_top = 118.0
margin_right = 920.0
margin_bottom = 168.0
custom_constants/separation = 20

[node name="SendGameplayStartedButton" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer3" index="0"]
margin_right = 229.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Send Gameplay Started"

[node name="SendGameplayStoppedButton" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer3" index="1"]
margin_left = 249.0
margin_right = 488.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Send Gameplay Stopped"

[node name="SendPlayerGotAchievementButton" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer3" index="2"]
margin_left = 508.0
margin_right = 793.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Send Player Got Achievement"

[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer2/SendGameReadyButton" to="." method="_on_send_game_ready_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer2/SendInGameLoadingStartedButton" to="." method="_on_send_in_game_loading_started_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer2/SendInGameLoadingStoppedButton" to="." method="_on_send_in_game_loading_stopped_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer3/SendGameplayStartedButton" to="." method="_on_send_gameplay_started_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer3/SendGameplayStoppedButton" to="." method="_on_send_gameplay_stopped_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer3/SendPlayerGotAchievementButton" to="." method="_on_send_player_got_achievement_button_pressed"]
